<?xml version="1.0"?>
<package>
  <name>sodadrive</name>
  <version>0.0.1</version>
  <description>Sodabot's drive train</description>

  <maintainer email="geh@wayspace.com">George Hoffman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
